fix: Overflowed text not scrolling

--- a/frontend/css/brainzplayer.less
+++ b/frontend/css/brainzplayer.less
@@ -488,6 +488,7 @@
       flex: 1;
       display: flex;
       flex-direction: column;
+      overflow: auto;
     }
 
     .text-scroll-wrapper {
